--- a/home.css
+++ b/home.css
@@ -7,7 +7,7 @@
         background-color: #2B2B2B;
         color: white;
         overflow: auto;
-        border-bottom: 3px solid #9b18d8b7;
+        border-bottom: 3px solid #6b009c;
         ;
         padding: 20px 0;
     }
@@ -35,11 +35,11 @@
     }
     
     .destaque {
-        color: #9b18d8b7;
+        color: #6b009c;
     }
     
     .navbar span {
-        color: #9b18d8b7;
+        color: #6b009c;
     }
     
     .banner {
@@ -63,7 +63,7 @@
     
     .saiba-mais button {
         border: 0;
-        background-color: #9b18d8b7;
+        background-color: #6b009c;
         color: #fff;
         text-transform: uppercase;
         padding: 10px 30px;
@@ -102,4 +102,25 @@
     
     .footer h4 {
         margin: 0;
+    }
+    
+    .pag-login {
+        background-color: #6b009c;
+        margin: auto;
+    }
+    
+    .box-login {
+        width: 40%;
+        text-align: center;
+        margin: auto;
+        color: white;
+        box-shadow: 5px 7px 13px 1px black;
+    }
+    
+    .pag-login h1 {
+        margin: 0;
+    }
+    
+    a {
+        text-decoration: none;
     }
